kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: real-time-platform
  labels:
    name: real-time-platform
    app.kubernetes.io/name: real-time-platform
    app.kubernetes.io/part-of: event-platform
